--- a/note/create project.html
+++ b/note/create project.html
@@ -17,6 +17,7 @@
                 <li>install xampp</li>
                 <li>set global var php path</li>
                 <li>setup github</li>
+                <li>edit hosts file</li>
                 <li>remove ; in front "extension=curl" in php.ini</li>
                 <li>remove ; in front "extension=fileinfo" in php.ini</li>
                 <li>remove ; in front "extension=openssl" in php.ini</li>
@@ -25,9 +26,18 @@
                 <li>cd project directory</li>
                 <li>composer create-project laravel/laravel name --prefer-dist //other version<br />
                     composer create-project laravel/laravel test dev-develop //version 5.7</li>
-                <li>php artisan key:generate</li> <!-- perform the permission writing for your storage directory and the bootstrap/cache. -->
+                <li>cd name</li>
                 <li>edit .env DB_DATABASE=laravel</li>
                 <li>edit config/database.php database</li>
+                <li>php artisan key:generate</li> <!-- perform the permission writing for your storage directory and the bootstrap/cache. -->
+                <li>php artisan config:cache</li>
+                <li>php artisan migrate</li>
+                <li>php artisan serve</li>
+                <li>composer init</li>
+                <li>composer update</li>
+                <li>npm install</li>
+                <li>npm run dev</li>
+                <li>npm run build</li>
             </ol>
         </div>
     </body>
