--- a/note/create project.html
+++ b/note/create project.html
@@ -29,6 +29,7 @@
       <li>cd name</li>
       <li>edit .env DB_DATABASE=laravel</li>
       <li>edit config/database.php database</li>
+      <li>composer install --optimize-autoloader --no-dev</li>
       <li>composer init -n</li>
       <li>composer update</li>
       <li>composer require laravel/breeze --dev</li>
