--- a/note/defination.html
+++ b/note/defination.html
@@ -18,6 +18,9 @@
         Middleware can be defined as a middle-man or interface acting in coordination between a request and a response. As the above test scenario mentioned, your project may redirect the user from the login.php to the index.php page if the user is not authenticated.
       </li>
       <li>Vite</li>
+      <li>singleton</li>
+      <li>mock</li>
+      <li>stub</li>
     </ol>
   </body>
 </html>
